# bord

./: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.bench  config.json  docker-compose.yml
.sqlx/: query-02ed0c3dec64407adca37548e53d14d1343fe6a2878c1714a54573aaccb0924f.json  query-108dd87be119ed65da391fa281cccbff6653edd5a30f3a0b6180a96aa67340a4.json  query-11d781abedac866250d5e4d472519fc486f46ef89c48cb0d76fe461ea8a7e56a.json  query-17cbb9d398f5d0b81f7786a9215f3ed2e288b621f698b81b54e025fe9823f483.json  query-23f77d25349c95b3d80c358b2f7e572c08b6eed25617a3a8540247e96755e99b.json  query-3c9f23b454ca6187c5e7da230b309b1d49ab27da2467dca8ebe462a7137352d6.json  query-974de075781b1cf7dfacbb586743b93908cbf12a46b768f81af8281b548cffbe.json  query-99f9c000ac65466e12840b998d1cc978023e5d067abff57e3ce0df95e28821a3.json  query-a277fec480692e1986975015f3bb3374c946a74a2e40840199a8e0d91eff7e3b.json  query-decef93ad7b50fded4701d64c29277f8e041569e671bfe266692c08c6dc2477d.json  query-e7cdd39e006661f9cded6c85d809bad41fda135addc65f5a379c2b66041c2838.json
migrations/: 20240110113248_submissions.sql  20240110113301_leaderboard.sql  20240110114223_users.sql
src/: benchmarking.rs  config.rs  error.rs  lib.rs  main.rs  routes.rs
static/: index.html
