[package]
name = "bord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
axum-extra = { version = "0.9.1", features = ["typed-header"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace", "limit"] }
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
bollard = "0.15.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
include_dir = "0.7.3"
mime_guess = "2.0.4"
config = "0.13.4"
dotenv = "0.15.0"
chrono = "0.4.31"
color-eyre = "0.6.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
